Updated basic html file

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -44,6 +44,9 @@
       </section>
     </div>
   </div>
+  <audio src="music.mp3"></audio>
+  <audio src="ting.mp3"></audio>
+  <audio src="gameover.mp3"></audio>
   <div class="result-box">
     <div class="won-text"></div>
     <div class="btn"><button>Replay</button></div>
